--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "morgan": "~1.9.1"
   }
